<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_analysis"
        android:icon="@drawable/ic_chart"
        android:title="@string/action_analysis"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_categories"
        android:title="@string/action_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_balance"
        android:title="@string/action_balance"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/action_budget"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scheduled"
        android:title="@string/action_scheduled"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>
